src/pages/ow/index.module.css
a:hover {
    text-decoration: none;
}

.container {
    --button-length: min(64px, 14vw);
    --margin-horizon: min(56px, 4vw);
    position: relative;
    user-select: none;
}

.navBar {
    position: fixed;
    display: flex;
    align-items: center;
    top: 28px;
    left: var(--margin-horizon);
    right: var(--margin-horizon);
    height: var(--button-length);
    background: rgba(51, 55, 72, 0.75);
}

.navBar > * {
    flex-shrink: 0;
}

.square {
    --outline: min(4px, 0.9vw);
    display: block;
    width: var(--button-length);
    height: var(--button-length);
}

a.square {
    display: block;
    border: none;
    color: white;
    border: var(--outline) solid transparent;
}

a.square > svg {
    padding: min(7px, 1.53vw);
    width: 100%;
    height: 100%;
}

a.square:hover {
    border: var(--outline) solid hsla(0, 0%, 100%, 0.9);
}

.unsplash {
    background: #ffc126;
    box-shadow: 0 0 5px 1px rgb(255, 193, 38, 0.5);
}

.github {
    background: #3797e0;
    box-shadow: 0 0 5px 1px rgb(55, 151, 224, 0.5);
}

.menu {
    background: #57bcff;
    box-shadow: 0 0 5px 1px rgba(87, 188, 255, 0.5);
    cursor: pointer;
}

.info {
    display: flex;
    align-items: center;
    width: min(360px, 40vw);
    height: 100%;
    color: white;
}

.online {
    width: min(8px, 1.75vw);
    height: 100%;
    background: #7cff00;
}

.name {
    margin-left: 12px;
    font-size: 17px;
}

.bg {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: -1;
}

.tab {
    --tab-bottom: min(6px, 1.3vw);
    position: relative;
    padding: min(11px, 2.4vw) min(24px, 5.25vw) 0;
    height: 100%;
    font-size: min(20px, 4.38vw);
    color: #26a9e1;
    border: 1px solid rgba(51, 55, 72, 0.1);
}

.tab.active {
    border-bottom: var(--tab-bottom) solid rgba(90, 255, 255, 1);
    background: rgba(87, 188, 255, 0.8) !important;
    color: white !important;
    box-shadow: 0 0 5px 1px rgba(87, 188, 255, 0.5);
}

@keyframes progress {
    from {
        background-size: 0 var(--tab-bottom);
    }
    to {
        background-size: 100% var(--tab-bottom);
    }
}

.tab:hover {
    color: #26a9e1;
    background: linear-gradient(rgba(90, 255, 255), rgba(90, 255, 255)) center
        bottom/0 var(--tab-bottom) no-repeat;
    animation: 0.2s ease-in-out forwards progress;
}

.menuPage {
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100vw;
    height: 100vh;
    z-index: 10;
}

@keyframes fade {
    from {
        opacity: 0;
    }

    to {
        opacity: 0.5;
    }
}

.mask {
    position: absolute;
    width: 100%;
    height: 100%;
    background: black;
    z-index: 15;
    animation: 0.3s ease-out forwards fade;
}

.menuCell {
    padding: 5px 10px;
    width: 200px;
    text-align: center;
    border-radius: 3px;
    background: rgba(61, 178, 255, 0.7);
    box-shadow: 0 0 5px 1px rgba(61, 178, 255, 0.5);
    color: white;
    z-index: 20;
}

.siteCell {
    background: rgba(255, 193, 38, 0.8);
    box-shadow: 0 0 5px 1px rgb(255, 193, 38, 0.5);
}

.menuCell:hover {
    box-shadow: 0 0 1px 2px white;
    color: white;
}

.menuCell + .menuCell {
    margin-top: 16px;
}

